--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@lottiefiles/dotlottie-react": "^0.13.3",
     "@lottiefiles/lottie-player": "^2.0.12",
     "@tailwindcss/vite": "^4.1.4",
