--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "firebase": "^11.7.3",
     "leaflet": "^1.9.4",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
