--- a/package.json
+++ b/package.json
@@ -1,43 +1,42 @@
 {
-  "name": "weatherapp",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@google/generative-ai": "^0.24.0",
-    "@lottiefiles/dotlottie-react": "^0.13.3",
-    "@lottiefiles/lottie-player": "^2.0.12",
-    "@tailwindcss/vite": "^4.1.4",
-    "axios": "^1.8.4",
-    "date-fns": "^4.1.0",
-    "date-fns-tz": "^3.2.0",
-    "firebase": "^11.7.3",
-    "leaflet": "^1.9.4",
-    "lottie-react": "^2.4.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.5.3"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4",
-    "vite": "^6.2.0"
-  }
+    "name": "weatherapp",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@google/generative-ai": "^0.24.0",
+        "@lottiefiles/dotlottie-react": "^0.13.3",
+        "@lottiefiles/lottie-player": "^2.0.12",
+        "@tailwindcss/vite": "^4.1.4",
+        "axios": "^1.8.4",
+        "date-fns": "^4.1.0",
+        "date-fns-tz": "^3.2.0",
+        "firebase": "^11.7.3",
+        "lottie-react": "^2.4.1",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-icons": "^5.5.0",
+        "react-router-dom": "^7.5.3",
+        "react-transition-group": "^4.4.5"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.21.0",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
+        "@vitejs/plugin-react": "^4.3.4",
+        "autoprefixer": "^10.4.21",
+        "eslint": "^9.21.0",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "globals": "^15.15.0",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.1.4",
+        "vite": "^6.2.0"
+    }
 }
