--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "date-fns": "^4.1.0",
         "date-fns-tz": "^3.2.0",
         "firebase": "^11.7.3",
+        "framer-motion": "^12.16.0",
         "lottie-react": "^2.4.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
