Refactor code structure for improved readability and maintainability

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_GEMINI_API_KEY=AIzaSyD9GMYVY1UdseWQ-ybe7xCztvb5fHA8ZEk
+VITE_GEMINI_API_KEY=AIzaSyBmbPEORoBPFVr8BQF4pgDkh3FG1DyLDOM
 VITE_RSS2JSON_API_KEY=gjigfrawthkmtyaf1kgezwz8rauwhvse0du1qpzw
+VITE_FIREBASE_CONFIG={"apiKey":"AIzaSyD6RAx-26PuAPL382LuEErQ7oE1BEtEkDc","authDomain":"reactweatherapp-a7290.firebaseapp.com","projectId":"reactweatherapp-a7290","storageBucket":"reactweatherapp-a7290.firebasestorage.app","messagingSenderId":"841747031662","appId":"1:841747031662:web:5c0f0eda053f8291dfe87f"}
